--- a/src/Services/StoreService/StoreService.Core/StoreService.Core.csproj
+++ b/src/Services/StoreService/StoreService.Core/StoreService.Core.csproj
@@ -10,4 +10,8 @@
     <PackageReference Include="MongoDB.Bson" Version="3.1.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\..\..\Shared\Shared\Shared.csproj" />
+  </ItemGroup>
+
 </Project>
